--- a/aboutus.html
+++ b/aboutus.html
@@ -12,7 +12,7 @@
         <h1 class="title"> Zindua Smart Earn</h1>
       <!-- Navigation bar starts here -->
       <div class="navbar">
-          <ul>
+          <ul style="font-size:smaller;">
               <li><a href="./index.html">HOME</a></li>
               <li><a href="./aboutus.html">about US</a></li>
               <li><a href="./signup.html">login</a></li>
