--- a/aboutus.html
+++ b/aboutus.html
@@ -34,9 +34,9 @@
           🔑 <br> <u> 💎FOREX TRADING💎</u>
            <br>Here we give basic classes for beginners who are interested in trading forex🔑🔑.They are shown how to make proper business decisions🔑
         </h4> <i>✔⚡NB:- M-PESA, Airtel Money, T-CASH and PayPal are supported</i>
-        <p style="font-family: cursive;">What you are supposed to do : <br> 1. Send the activation fee of Ksh 50, Ksh 100  or according to the package you need. to <b>0113910570</b>
+        <p style="font-family: Times New Romans;">What you are supposed to do : <br> 1. Send the activation fee of Ksh 50, Ksh 100  or according to the package you need. to <b>0113910570</b>
 
-            <br>2. Send the CONFIRMATION messagefrom M-pesa to <u style="font-size: larger;">0113910570</u>
+            <br>2. Send the CONFIRMATION messagefrom M-pesa to <u style="font-size: larger;">0112671970</u>
             <br>3.Admin will send you a ZD code ***** which you will use to login and your account will be opened successfully
         </p>
      <a href="./signup.html"> <button type="submit">start now</button></a>
