--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
      <p style="color: #0000ff;font-size: xx-large;">if you are interested to join zindua go to the About us page and it will help you through</p>
           
      <section class="credit py-4">
-        <p class="text-center">Created in love by   <i class="fas fa-heart fa-spin"></i> Felix lastborn 
+        <p class="text-center">Created in love by   <i class="fas fa-heart fa-spin"></i> ZINDUA SMART EARN 
         </p>
     </section>
 
