--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Zindua smart earn</title>
+        <title>Felix WEBmasters</title>
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/5e0e1ff247.js" crossorigin="anonymous"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -16,7 +16,7 @@
              #0000ff;">
                 <h2 class="text-info fw-bold fs-2 " style="font-size:17cm; font-stretch: expanded; 
                 padding: 40;"><b style="font-size: xx-large;"
-                ><u>Zindua Smart Earn</u></b><img  src="./assets/s symbol.jpeg" height="30" width="40"></h2>                   <p class="text-secondary fw-lighter fs-6">
+                ><u>felix webmasters</u></b><img  src="./assets/s symbol.jpeg" height="30" width="40"></h2>                   <p class="text-secondary fw-lighter fs-6">
                   <b style="color: aqua; font-size: larger;">launched 11<sup>th</sup> January 2023, Kenya</b>
                 </p>
             </div>
@@ -57,7 +57,7 @@
     </div>
   </nav>
   <!-- navbar ends -->
-  <p style="text-align: center; color: rgb(19, 76, 78);">For more info contact us at--@Zinduasmartearn@gmail.com</p>
+  <p style="text-align: center; color: rgb(19, 76, 78);">For more info contact us at--@felixlastbornofficial@gmail.com</p>
 
   <h1 style="text-align: center; background-color:bisque;"><b><b style="color: rgb(0, 225, 255);">OUR</b> <B style="color: blue;">PRICES</B></b></h1>
   <!-- second card section starts -->
@@ -162,7 +162,7 @@
      <p style="color: #0000ff;font-size: xx-large;">if you are interested to join zindua go to the About us page and it will help you through</p>
           
      <section class="credit py-4">
-        <p class="text-center">Created in love by   <i class="fas fa-heart fa-spin"></i> ZINDUA SMART EARN 
+        <p class="text-center">Created in love by   <i class="fas fa-heart fa-spin"></i> Felix Lastborn
         </p>
     </section>
 
