--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>zindua</title>
+    <title>Felix</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
           </ul>
       </div>
       <div class="slider">
-        <h4>This is Zindua Smart Earn Ltd
+        <h4>This is Felix Webmasters Ltd
             .this deals with.. <br> <u> 💎AFFILIATE MARKETING⚡💎💎🔐</u><br>Here you earn commissions by promoting our products and services.When you invite anyone with a link that you are provided with you earn a 💎Bonus of <i>KSH 100</i>
             🌴
            <br> <u> 💎PAID ADVERTS CLICKS💎</u>
