--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zindua smart earn</title>
+    <title>Felix webmasters</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/5e0e1ff247.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -16,7 +16,7 @@
          #da56e6;">
             <h2 class="text-info fw-bold fs-2 " style="font-size:17cm; font-stretch: expanded; 
             padding: 40;"><b style="font-size: xx-large;"
-            ><u>Zindua Smart Earn</u></b><img  src="./assets/s symbol.jpeg" height="30" width="40"></h2>                   <p class="text-secondary fw-lighter fs-6">
+            ><u>felix webmasters</u></b><img  src="./assets/s symbol.jpeg" height="30" width="40"></h2>                   <p class="text-secondary fw-lighter fs-6">
               <b style="color: rgb(232, 248, 231); font-size: larger;">launched 11<sup>th</sup> January 2023, Kenya</b>
             </p>
         </div>
@@ -52,7 +52,7 @@
 <p style="color: azure;"><b>Once you send a screenshot to the Admin (<i>0113910570</i>)He will send you a specific <u>ZD code</u>which will help you below.</b></p>
 <!-- navbar ends -->
 <div class="login">
-    <h1>ZINDUA</h1>
+    <h1>FELIX</h1>
     <form >
         <p>ZD code</p>
         <input type="text" name="" placeholder="code">
