--- a/aboutus.html
+++ b/aboutus.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="felix">
-        <h1 class="title"> Zindua Smart Earn</h1>
+        <h1 class="title"> Felix webmasters</h1>
       <!-- Navigation bar starts here -->
       <div class="navbar">
           <ul style="font-size:smaller;">
